[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/Bullet/Bullet_Fly1.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Bullet/Bullet_Fly2.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Nene_Bullet.gd" type="Script" id=3]
[ext_resource path="res://Sprites/LightMask.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "impact",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=2]
resource_name = "Fire"
length = 0.15
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "default" ]
}

[sub_resource type="Animation" id=3]
resource_name = "Impact"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "impact" ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "impact_finished"
} ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 4.68905, 2.64919 )

[sub_resource type="CircleShape2D" id=5]
radius = 4.65886

[node name="Nene_Bullet" type="KinematicBody2D"]
scale = Vector2( 3, 3 )
collision_layer = 5
collision_mask = 5
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Fire = SubResource( 2 )
anims/Impact = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )
disabled = true

[node name="Hitbox" type="Area2D" parent="."]
visible = false
collision_layer = 5
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.5
autostart = true

[node name="Light2D" type="Light2D" parent="."]
visible = false
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 4 )
color = Color( 1, 0.823529, 0.494118, 1 )
energy = 0.5
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
